force-app/main/default/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Acre_Adjusted_Amount__c</fullName>
        <formula>if(Adjusted_Acres__c&gt;0,Price_Per_Acre__c * Adjusted_Acres__c,
     if(Amended_Acres__c&gt;0,Amended_Contract_Amount__c,
         Bid_Contract_Amount__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Read only formula field that calculates the adjusted acres multiplied by the amount per acre.</inlineHelpText>
        <label>Acre Adjusted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjusted_Acres__c</fullName>
        <inlineHelpText>Reduced acreage based on changes agreed upon before the field season or due to changes occurring during the field season (e.g., reduced water availability, problems with field prep, etc.).</inlineHelpText>
        <label>Adjusted Acres</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amended_Acres__c</fullName>
        <formula>IF(ISPICKVAL(Contract_Amendment_Lookup__r.Status__c, &quot;Approved&quot;), Contract_Amendment_Lookup__r.Amended_Acres__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Read-only field which auto-populates when the related contract amendment is selected and approved.</inlineHelpText>
        <label>Amended Acres</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amended_Contract_Amount__c</fullName>
        <formula>Total_Amendment_Amount__c  +  Original_Contract_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total amount of the contract plus the additional contract amount from approved amendments.</inlineHelpText>
        <label>XDepracated:Amended Contract Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bid_Contact_Name__c</fullName>
        <formula>BirdReturns_Bid_Name__r.Bid_Contact__r.FirstName&amp;&quot; &quot;&amp;BirdReturns_Bid_Name__r.Bid_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Read-only field pulls in the name of the primary contact for the bid.</inlineHelpText>
        <label>Bid Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bid_Contact_Phone__c</fullName>
        <formula>BirdReturns_Bid_Name__r.Bid_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Read-only field pulls in the phone number for the primary contact for the bid.</inlineHelpText>
        <label>Bid Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bid_Contract_Amount__c</fullName>
        <description>The BR team wanted to use the number of acres as reported by the bidder rather than the GIS acres. If the GIS acres &amp; the bid acres are significantly different, they will contact the bidder.</description>
        <formula>BirdReturns_Bid_Name__r.Acres__c  *  BirdReturns_Bid_Name__r.Round_1_Bid_Amount_Per_Acre__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Read only formula field that calculates the original number of acres multiplied by the amount per acre from the related Bid record.</inlineHelpText>
        <label>Bid Contract Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bid_Contract_Representative__c</fullName>
        <formula>BirdReturns_Bid_Name__r.Contract_Representative__r.FirstName &amp; &quot; &quot; &amp;
 BirdReturns_Bid_Name__r.Contract_Representative__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Read-only field pulls in the name of the person authorized to sign contracts on behalf of the contracting party.</inlineHelpText>
        <label>Bid Contract Representative</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BirdReturns_Bid_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the &quot;Look Up&quot; icon to search for the correct Bid Name. Enter the full bid name, including program period. Format: &quot;16-FR-055&quot;.</inlineHelpText>
        <label>BirdReturns Bid Name</label>
        <referenceTo>Bid__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bird_Returns_Calc_Percent_In_Compliance__c</fullName>
        <description>Calculated value. Average of the Est % in Compliance from all Site Compliance Visits (TNC data only).</description>
        <formula>IF( Num_Stakes_Reported__c &gt;0,Bird_Returns_Total_In_Compliance__c / Num_Stakes_Reported__c,NULL)</formula>
        <inlineHelpText>Calculated value. Average of the Est % in Compliance from all Site Compliance Visits (TNC data only).</inlineHelpText>
        <label>Calculated % In Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bird_Returns_Manual_Percent_Compliance__c</fullName>
        <description>Manual Override of the calculated % in compliance. To be used at program manager&apos;s discretion. Requires a note with an explanation.</description>
        <inlineHelpText>Manual Override of the calculated % in compliance. To be used at program manager&apos;s discretion. Requires a note with an explanation.</inlineHelpText>
        <label>Manual Override % In Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bird_Returns_Total_In_Compliance__c</fullName>
        <description>Sum of Total % in Complance for Calc in Site Visits. Only includes field tech reports. Used in Bird_Returns_Calc_Percent_In_Compliance__c formula. Don&apos;t deprecate.</description>
        <label>Total % In Compliance</label>
        <summarizedField>Bird_Returns_Site_Compliance_Visit__c.Total_In_Compliance_for_Calc__c</summarizedField>
        <summaryFilterItems>
            <field>Bird_Returns_Site_Compliance_Visit__c.Reporter_Type__c</field>
            <operation>equals</operation>
            <value>Field Tech reporter</value>
        </summaryFilterItems>
        <summaryForeignKey>Bird_Returns_Site_Compliance_Visit__c.Bid_ID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cancellation_Fee__c</fullName>
        <inlineHelpText>Fee or bonus to be paid to contracting party. This will be the Final Payment Amount if the contract is canceled. Or, if the contract has any other status, this amount will be added to the Final Payment Amount as a bonus.</inlineHelpText>
        <label>Cancellation Fee or Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Contact name is associated with the related Account (company or business entity). If the Contact name does not exist, go to Accounts tab, locate or create the Account and create a new Contact related to that Account.</inlineHelpText>
        <label>Contact Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Amendment_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field was created to establish a lookup relationship between contracts and amendments so cross-object formulas and validation rules can be created.  JA  4/24/13</description>
        <inlineHelpText>Select the related contract amendment to display the related contract amended acres, price per acres, and amending contract amount.  A filter is in place to only display amendments related to this contract.</inlineHelpText>
        <label>Contract Amendment Lookup</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contract_Amendment__c.Contract_Number__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contract_Amendment__c</referenceTo>
        <relationshipLabel>Contracts Related List</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Balance__c</fullName>
        <formula>IF( CONTAINS(RecordType.DeveloperName,&quot;Grant&quot;), Grant_Balance__c , Total_Contract_Amount__c  -  Invoices_Paid_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A read only field that calculates the remaining balance on the contract.  The calculation totals the approved invoice payment requests subtracted from the total contract.</inlineHelpText>
        <label>Contract Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Entity__c</fullName>
        <label>Contract Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conservation Farms &amp; Ranches</fullName>
                </value>
                <value>
                    <fullName>Reclamation District 38</fullName>
                </value>
                <value>
                    <fullName>Reclamation District 2110</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DealName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The name of the deal the contract is related to.</description>
        <inlineHelpText>If the contract is related to an existing deal record in the &quot;Deals&quot; tab, please use the look up feature and locate the deal record.</inlineHelpText>
        <label>Deal Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contract</relationshipLabel>
        <relationshipName>Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Final_Payment_Amount__c</fullName>
        <formula>IF( 
AND(Cancellation_Fee__c &gt; 0,  ISPICKVAL(Status,&quot;Contract Canceled&quot;)), 
Cancellation_Fee__c, 
((if(Adjusted_Acres__c=0,Bid_Contract_Amount__c,Acre_Adjusted_Amount__c) *(if(Bird_Returns_Manual_Percent_Compliance__c=0, Bird_Returns_Calc_Percent_In_Compliance__c, Bird_Returns_Manual_Percent_Compliance__c)))+Cancellation_Fee__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Final Payment Amount is the Acres Adjusted Amount multiplied by the Calculated % In Compliance *OR* the Manual Override % in Compliance if it is filled in. If the contract has been canceled, then the Cancellation Fee amount will display instead.</inlineHelpText>
        <label>Final Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financial_Account_Number__c</fullName>
        <inlineHelpText>Select the financial account number associated with this contract.</inlineHelpText>
        <label>Financial Account Number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>125000 Deposits - Utilities &amp; Other</fullName>
                </value>
                <value>
                    <fullName>150500 Construction In Progress</fullName>
                </value>
                <value>
                    <fullName>152000 Furniture, fixtures, plant &amp; equip</fullName>
                </value>
                <value>
                    <fullName>154000 TNC Vehicles</fullName>
                </value>
                <value>
                    <fullName>502700 Business Entertainment</fullName>
                </value>
                <value>
                    <fullName>505000 Recruitment</fullName>
                </value>
                <value>
                    <fullName>505600 Trainings and Meetings</fullName>
                </value>
                <value>
                    <fullName>507300 Legal Services Fees</fullName>
                </value>
                <value>
                    <fullName>507600 Subawards, Grants-Non US Fed Govt Only</fullName>
                </value>
                <value>
                    <fullName>507700 Contracts/Professional Fees</fullName>
                    <default>true</default>
                    <label>507700 Contracts/Professional Fees</label>
                </value>
                <value>
                    <fullName>507800 Sub Recipient Expenses-US Fed Govt Only</fullName>
                </value>
                <value>
                    <fullName>507900 Professional Fund Raising Fees</fullName>
                </value>
                <value>
                    <fullName>509300 Lobbying Contracts</fullName>
                </value>
                <value>
                    <fullName>520100 - Telecommunications</fullName>
                </value>
                <value>
                    <fullName>521500 Printing &amp; Photo</fullName>
                </value>
                <value>
                    <fullName>522500 Office and Other Equipment</fullName>
                </value>
                <value>
                    <fullName>524100 Media Advertising</fullName>
                </value>
                <value>
                    <fullName>540500 Rent/Lease - Office Space</fullName>
                </value>
                <value>
                    <fullName>541100 Office Remodeling, Repairs, Utilities</fullName>
                </value>
                <value>
                    <fullName>550100 Equipment Lease &amp; Maintenance</fullName>
                </value>
                <value>
                    <fullName>560100 Dues, Fees, Licenses</fullName>
                </value>
                <value>
                    <fullName>575000 Donations to Non-501(c)(3) Type Entities</fullName>
                </value>
                <value>
                    <fullName>581000 Office &amp; Other Equipment $5,000 - $50,000</fullName>
                </value>
                <value>
                    <fullName>583000 Construction  &amp; Restoration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GeoDesign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter the name of the Conservation Tech team member if &quot;Yes&quot; is selected in the &quot;Conservation Tech Review?&quot; field.</inlineHelpText>
        <label>Conservation Tech</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts4D5B</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grant_Balance__c</fullName>
        <description>A read only field that calculates the remaining balance on the grant.  The calculation totals the approved invoice payment requests subtracted from the grant amount. 10/28/16 Added the subtraction of amount transferred to escrow BH.</description>
        <formula>IF( Original_Grant_Amount__c = 0, 0,
     Original_Grant_Amount__c  + Total_Grant_Amendment_Amount__c - Invoices_Paid_Date__c -                                                                                         Grant_Out_Amount_Transferred_to_Escrow__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A read only field that calculates the remaining balance on the grant.  The calculation totals the approved invoice payment requests subtracted from the grant amount. Also subtracts any amount transferred to escrow for acquisition.</inlineHelpText>
        <label>Grant Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grant_Out_Amount_Transferred_to_Escrow__c</fullName>
        <description>Set up for grants out for a combination of acquisition, restoration and stewardship.  Subtracts out from the balance of the grant the amount dedicated to the purchase so that project managers can track the amount remaining for stewardship and restoration.</description>
        <inlineHelpText>If grant is funding both an acquisition and stewardship and restoration, enter the amount transferred to escrow toward the purchase price of the acquisition.</inlineHelpText>
        <label>Grant Out Amount Transferred to Escrow</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoices_Paid_Date__c</fullName>
        <description>A read only field that summarizes the payment amount on the approved invoices.</description>
        <inlineHelpText>A read only field that summarizes the total payment amount on all approved invoices.  If the payment has not been approved through the &quot;Payment Request&quot; approval process, the amount will not apply.</inlineHelpText>
        <label>Invoices Paid to Date</label>
        <summarizedField>Contract_Payment_request__c.Invoice_Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Contract_Payment_request__c.Payment_Request_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Contract_Payment_request__c.Contract_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Master_Contract_Name__c</fullName>
        <formula>Master_Contract_Number__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Contract Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Contract_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the name of the master contract from the look-up list that the sub-agreement relates to.</inlineHelpText>
        <label>Master Contract Number</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Sub-Agreements</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_Contract_End_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if the contract does not have an end date.</inlineHelpText>
        <label>No Contract End Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Num_Stakes_Reported__c</fullName>
        <description>Used in calculation for Calculated % in Compliance on the Contract. The calculation was created this way to accommodate both full and partial site compliance visits.</description>
        <inlineHelpText>Rollup field counts the number of stake depth reports that have been reported by field techs.</inlineHelpText>
        <label># Stakes Reported</label>
        <summarizedField>Bird_Returns_Site_Compliance_Visit__c.Total_Stakes__c</summarizedField>
        <summaryFilterItems>
            <field>Bird_Returns_Site_Compliance_Visit__c.Reporter_Type__c</field>
            <operation>equals</operation>
            <value>Field Tech reporter</value>
        </summaryFilterItems>
        <summaryForeignKey>Bird_Returns_Site_Compliance_Visit__c.Bid_ID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Original_Acreage__c</fullName>
        <formula>BirdReturns_Bid_Name__r.Acres__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Read-only field. Pulls in the number of acres reported by the bidder on the bid record. To change the number of acres for the final payment amount calculation, use the &apos;Adjusted Acres&apos; field.</inlineHelpText>
        <label>Original Acreage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Contract_Amount__c</fullName>
        <description>Text field. On all Non-RE and RE layouts (including for RD2110, RD38, CF&amp;R, and TNC), except BirdReturns.</description>
        <label>Original Contract Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Grant_Amount__c</fullName>
        <inlineHelpText>Enter in the amount of the grant.  Amount should not include match or cost share.  If the grant is less than $25,000, a waiver form from the executive director is required. (See government grants SOP)</inlineHelpText>
        <label>Original Grant Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Per_Acre__c</fullName>
        <formula>BirdReturns_Bid_Name__r.Round_1_Bid_Amount_Per_Acre__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Read-only field. Pulls in price per acre as requested by the bidder on the bid record.</inlineHelpText>
        <label>Price Per Acre</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Program Period for this Bid/Contract.</description>
        <inlineHelpText>Required field.  From the look-up icon, please select the name of the related Bird Returns Program Period.  If the Program Period does not exist, it must be created prior to saving a contract record.</inlineHelpText>
        <label>Program Period</label>
        <referenceTo>Bird_Returns_Program_Period__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_ID_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the &quot;Look Up&quot; icon to search for the related Project and Award ID. Use the &quot;Search&quot; or &quot;Filters&quot; to locate the project and select the project name. For grants in you will not be able to fill this in until executed.</inlineHelpText>
        <label>1) Project/Award ID</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Please select an &quot;active&quot; Project ID.</errorMessage>
            <filterItems>
                <field>Project_IDs__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>$Source.Status</field>
                <operation>notEqual</operation>
                <value>Draft</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project_IDs__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_ID_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the &quot;Look Up&quot; icon to search for the related Project and Award ID. Use the &quot;Search&quot; or &quot;Filters&quot; to locate the project and select the project name. For grants in, you will not be able to fill this in until executed.</inlineHelpText>
        <label>2) Project/Award ID</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Project_IDs__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>$Source.Status</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <infoMessage>Please select an &quot;active&quot; Project ID.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Project_IDs__c</referenceTo>
        <relationshipLabel>Contracts (Project ID)</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_ID_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the &quot;Look Up&quot; icon to search for the related Project and Award ID. Use the &quot;Search&quot; or &quot;Filters&quot; to locate the project and select the project name. For grants in, you will not be able to fill this in until executed.</inlineHelpText>
        <label>3) Project/Award ID</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Project_IDs__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>$Source.Status</field>
                <operation>equals</operation>
                <value>Draft</value>
            </filterItems>
            <infoMessage>Please select an &quot;active&quot; Project ID.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Project_IDs__c</referenceTo>
        <relationshipLabel>Contracts (Project ID)</relationshipLabel>
        <relationshipName>Contracts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Management_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to link to a property record in the &quot;Property Management&quot; tab to a related contract.</description>
        <inlineHelpText>If the contract is related to an existing property management record in the &quot;Property Management&quot; tab, please use the look up feature and locate the property management record.</inlineHelpText>
        <label>Property Management Unit Name</label>
        <referenceTo>Property_Management__c</referenceTo>
        <relationshipLabel>Non-Real Estate Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuickBooks_Class__c</fullName>
        <label>QuickBooks Class</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Contract_Entity__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Alfalfa</fullName>
                </value>
                <value>
                    <fullName>Clean, Restore Ditches</fullName>
                </value>
                <value>
                    <fullName>Control Seepage + Boils</fullName>
                </value>
                <value>
                    <fullName>Control Vegetation</fullName>
                </value>
                <value>
                    <fullName>Corn</fullName>
                </value>
                <value>
                    <fullName>DWR Phase 1 – Environmental Doc + Permit App</fullName>
                </value>
                <value>
                    <fullName>DWR Phase 1 – Planning and Design</fullName>
                </value>
                <value>
                    <fullName>DWR Phase 1 – Project Mgmt Admin + Reporting</fullName>
                </value>
                <value>
                    <fullName>DWR Phase 1 – Stakeholder Outreach</fullName>
                </value>
                <value>
                    <fullName>Elevator</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Exterm. Rodents + Repair Damage</fullName>
                </value>
                <value>
                    <fullName>Housing/Building</fullName>
                </value>
                <value>
                    <fullName>Lease</fullName>
                </value>
                <value>
                    <fullName>Levee Profiles + Cross Section</fullName>
                </value>
                <value>
                    <fullName>Mill Repair</fullName>
                </value>
                <value>
                    <fullName>Non Crop</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Overhead</fullName>
                </value>
                <value>
                    <fullName>Pasture</fullName>
                </value>
                <value>
                    <fullName>Plan for Flood Emergencies</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Ranch Overhead</fullName>
                </value>
                <value>
                    <fullName>RD 38 P.Install + Maintenance of Levee Gates</fullName>
                </value>
                <value>
                    <fullName>RD 38 Special Projects 5 year plan</fullName>
                </value>
                <value>
                    <fullName>Remove, Modify encroachments</fullName>
                </value>
                <value>
                    <fullName>Remove Drift dep, litter, debris</fullName>
                </value>
                <value>
                    <fullName>Rep + Shape Patrol + Acc. Roads</fullName>
                </value>
                <value>
                    <fullName>Repair, Restore Waterside Slop</fullName>
                </value>
                <value>
                    <fullName>Repair Minor Seepage, Erosion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_of_Grant_Out__c</fullName>
        <description>1/5/16 - Will use the grant type field instead when the new grant-out contract layout is released.  Values will be set in the grant type field and this field can be deleted.</description>
        <inlineHelpText>Please specify the source of grant out awards.</inlineHelpText>
        <label>XDeprecated_Source of Grant Out</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Agreement_Number__c</fullName>
        <displayFormat>Sub-Agt-{MM}{DD}{YY}-{0000}</displayFormat>
        <label>Sub-Agreement Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Total_Active_Stakes__c</fullName>
        <description>Not differentiating between active and inactive stakes; old idea that was never really implemented. Deprecating.</description>
        <label>XDeprecated: Total Active Stakes</label>
        <summaryFilterItems>
            <field>Bird_Returns_Stake__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Bird_Returns_Stake__c.Contract_ID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Amendment_Amount__c</fullName>
        <inlineHelpText>This is a total of ALL approved amendments to the contract.</inlineHelpText>
        <label>Total Amendment Amount</label>
        <summarizedField>Contract_Amendment__c.Change_Contract_Amount_By__c</summarizedField>
        <summaryFilterItems>
            <field>Contract_Amendment__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved, Executed Amendment</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Contract_Amendment__c.Change_the_Contract_Amount__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>Contract_Amendment__c.Contract_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Amount__c</fullName>
        <formula>Original_Contract_Amount__c  +  Total_Amendment_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The original amount + the Total Amendment Amount (Total of all approved amendments)</inlineHelpText>
        <label>Total Contract Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>